# aoc2021

./: .gitignore  CMakeLists.txt  run.sh
p1/: CMakeLists.txt
p10/: CMakeLists.txt
p11/: CMakeLists.txt  demo2
p2/: CMakeLists.txt
p3/: CMakeLists.txt
p4/: CMakeLists.txt
p5/: CMakeLists.txt
p6/: CMakeLists.txt
p7/: CMakeLists.txt
p8/: CMakeLists.txt
p9/: CMakeLists.txt
